# R2H5

./: README.md  environment.yaml  inspect_h5.py  process_h5.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  setup.sh  submit_multi_jobs.sh
configs/: Easyjet-objects.yaml  SuperNtuple-AOD-FTAG-Pileup_v01.yaml  SuperNtuple-AOD-FTAG-Pileup_v02.yaml  SuperNtuple-AOD-Vertex-Timing-HGTD.yaml  SuperNtuple-AOD-Vertex-Timing-HGTD_w_LAr.yaml  SuperNtuple-AOD-Vertex-Timing-my-old-files.yaml  SuperNtuple-AOD-Vertex-Timing-my-old-files_more.yaml  SuperNtuple-AOD-Vertex-Timing-my-version.yaml  SuperNtuple-AOD-Vertex-Timing-with-Jets.yaml  SuperNtuple-AOD-Vertex-Timing.yaml  SuperNtuple-FTAG1-JVA.yaml  config-usage.txt
preprocessing/: process_h5.py  submit_multi_jobs.sh  validate_root.C
r2h5/: __init__.py  batch.py  cli.py  config_parser.py  converter.py  type.py
r2h5/cpp_helpers/: association.h  ftag_pileup.h  timing.h
r2h5/rdf_defines/: __init__.py  super_ntuples.py
