[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "r2h5"
version = "1.0"
description = "Flexible tool for converting ROOT TTree objects to ML-ready HDF5 datasets"
readme = "README.md"
requires-python = ">=3.7"
authors = [
    {name = "Brendon Bullard", email = "bbullard@slac.stanford.edu"},
    {name = "Mirella Vassilev", email = "mivassil@stanford.edu"}
]
keywords = ["physics", "ROOT", "HDF5", "machine-learning", "data-conversion"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Physics",
]

dependencies = [
    "numpy",
    "h5py",
    "pyyaml",
    "uproot",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
    "mypy",
]

[project.scripts]
r2h5 = "r2h5.cli:main"

[project.urls]
Homepage = "https://github.com/your-username/r2h5"
Repository = "https://github.com/your-username/r2h5"
Issues = "https://github.com/your-username/r2h5/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["r2h5*"]

[tool.setuptools.package-data]
r2h5 = [
    "cpp_helpers/*.h",
    "slurm/*",
]

[tool.black]
line-length = 88
target-version = ['py37']

[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
